--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -66,32 +66,26 @@ jobs:
           path: |
             build
             .ninja_log
-          key: ${{ matrix.os }}-ninja-${{ hashFiles('**/*.ninja') }}
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-ninja-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
           restore-keys: |
-            ${{ matrix.os }}-ninja-
+            ${{ matrix.os }}-${{ matrix.python-version }}-ninja-
 
       - name: Compile from Scratch
-        if: steps.cache-cpp.outputs.cache-hit != 'true' && startsWith(matrix.os, 'macos')  
+        if: startsWith(matrix.os, 'macos') && (steps.cache-cpp.outputs.cache-hit != 'true')
         shell: bash -l {0}
-        # env:
-        #   # Explicitly set ARM64 architecture
-        #   CFLAGS: "-target ${{ matrix.target }}"
-        #   CXXFLAGS: "-target ${{ matrix.target }}"  
-        #   MACOSX_DEPLOYMENT_TARGET: "11.0"
         run: |
           echo "arch=${{ matrix.arch }}"
-          echo "target=${{ matrix.target }}"        
+          echo "target=${{ matrix.target }}"      
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON \
                 -DCMAKE_C_FLAGS="-Wno-error=incompatible-function-pointer-types" \
-                -DCMAKE_BUILD_TYPE=Release -DVTK_VERSION_SUFFIX="" \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DVTK_VERSION_SUFFIX="" \
                 -DVTK_DIST_NAME_SUFFIX=cadquery \
                 -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} \
                 -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
                 -DCMAKE_HOST_SYSTEM_PROCESSOR=${{ matrix.arch }} \
-                -DCMAKE_CXX_COMPILER=clang++ \
                 -DCMAKE_CXX_FLAGS="-target ${{ matrix.target }}" \
-                -DCMAKE_C_COMPILER=clang \
                 -DCMAKE_C_FLAGS="-target ${{ matrix.target }}" \
                 -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
                 -DCMAKE_BUILD_TYPE=Release \
