debug python arch 2

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -19,13 +19,13 @@ jobs:
         python-version: ['3.11']
         include:
           # - os: 'macos-13'
-          #   arch: x86_64
-          #   python_arch: x64
-          #   target: x86_64-apple-macos11
+          #   arch: 'x86_64'
+          #   python_arch: 'x64'
+          #   target: 'x86_64-apple-macos11'
           - os: 'macos-14'
-            arch: arm64
-            python_arch: arm64
-            target: arm64-apple-macos11
+            arch: 'arm64'
+            python_arch: 'arm64'
+            target: 'arm64-apple-macos11'
 
     steps:
 
@@ -55,14 +55,23 @@ jobs:
           python -m pip install --upgrade wheel build setuptools
           python -m pip freeze 
 
+      - name: Verify Python architecture
+        run: |
+          python -c "import platform; print(platform.machine())"
+          file $(which python)
+          
       - name: Download vtk
         run: |
           mkdir -p ./vtk/build
           wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
+          
+      - name: Verify Python Architecture
+        run: |
           cd ./vtk/VTK-9.2.6
           python CMake/wheel_extract_platlib.py
-          
+          cd ..
+
       - name: Cache build folder
         id: cache-cpp
         uses: actions/cache@v3
