--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -31,10 +31,26 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.python_arch }}
+      - name: Set up ARM64 Python
+        if: matrix.os == 'macos-14'
+        run: |
+          # Ensure using ARM64 homebrew
+          arch -arm64 brew install python@${{ matrix.python-version }}
+          
+          # Verify and set the ARM64 Python
+          PYTHON_PATH=/opt/homebrew/bin/python${{ matrix.python-version }}
+          arch -arm64 $PYTHON_PATH -c "import platform; assert platform.machine() == 'arm64', 'Not ARM64 Python'"
+          
+          # Set for later steps
+          echo "PYTHON_EXECUTABLE=$PYTHON_PATH" >> $GITHUB_ENV
+          
+          # Verify Python architecture
+          arch -arm64 $PYTHON_PATH -c "import sys; print(f'Python arch: {sys.platform}, {platform.machine()}')"  
+
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
+      #     architecture: ${{ matrix.python_arch }}
                     
       - name: Ubuntu Deps
         if: matrix.os == 'ubuntu-20.04'
@@ -96,6 +112,7 @@ jobs:
                 -DVTK_WRAP_PYTHON=ON \
                 -DVTK_DIST_NAME_SUFFIX=cadquery \
                 -DVTK_VERSION_SUFFIX="" \
+                -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} \
                 -DCMAKE_C_FLAGS="-target ${{ matrix.target }}" \
                 -DCMAKE_CXX_FLAGS="-Wno-error=incompatible-function-pointer-types -target ${{ matrix.target }}" \
                 -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} \
