--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -31,30 +31,28 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      # - name: Set up ARM64 Python
-      #   if: matrix.os == 'macos-14'
-      #   run: |
-      #     # Ensure using ARM64 homebrew
-      #     arch -arm64 brew reinstall python@${{ matrix.python-version }}
-          
-      #     # Verify and set the ARM64 Python
-      #     PYTHON_PATH=/opt/homebrew/bin/python${{ matrix.python-version }}
-      #     arch -arm64 $PYTHON_PATH -c "import platform; assert platform.machine() == 'arm64', 'Not ARM64 Python'"
-          
-      #     # Set for later steps
-      #     echo "PYTHON_EXECUTABLE=$PYTHON_PATH" >> $GITHUB_ENV
-          
-      #     # Verify Python architecture
-      #     arch -arm64 $PYTHON_PATH -c "import sys; print(f'Python arch: {sys.platform}, {platform.machine()}')"  
+      - name: Install pyenv
+        run: |
+          brew install pyenv
+          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.zshrc
+          echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.zshrc
+          echo 'eval "$(pyenv init -)"' >> ~/.zshrc
+          source ~/.zshrc
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.python_arch }}
+      - name: Install and use arm64 Python with pyenv
+        run: |
+          PYTHON_CONFIGURE_OPTS="--enable-framework" pyenv install ${{ matrix.python-version }}
+          pyenv global ${{ matrix.python-version }}
+
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
+      #     architecture: ${{ matrix.python_arch }}
                     
 
       - name: Verify Python architecture
         run: |
+          python --version
           python -c "import platform; print(platform.machine())"
           file $(which python)
           
