--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -31,18 +31,16 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Install pyenv
-        run: |
-          brew install pyenv
-          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.zshrc
-          echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.zshrc
-          echo 'eval "$(pyenv init -)"' >> ~/.zshrc
-          source ~/.zshrc
-
-      - name: Install and use arm64 Python with pyenv
-        run: |
-          PYTHON_CONFIGURE_OPTS="--enable-framework" pyenv install ${{ matrix.python-version }}
-          pyenv global ${{ matrix.python-version }}
+      - name: Set up micromamba
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-name: myenv
+          create-args: >-
+            python=${{ matrix.python-version }}
+            wheel
+            build
+            setuptools
+          cache-environment: true
 
       # - uses: actions/setup-python@v5
       #   with:
@@ -51,6 +49,7 @@ jobs:
                     
 
       - name: Verify Python architecture
+        shell: bash -l {0}
         run: |
           python --version
           python -c "import platform; print(platform.machine())"
@@ -72,7 +71,7 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade wheel build setuptools
+          # python -m pip install --upgrade wheel build setuptools
           python -m pip freeze 
 
       - name: Download vtk
