--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -31,16 +31,16 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Set up micromamba
-        uses: mamba-org/setup-micromamba@v1
+      - uses: mamba-org/setup-micromamba@v1
         with:
-          environment-name: myenv
+          environment-name: vtkenv
           create-args: >-
             python=${{ matrix.python-version }}
             wheel
             build
             setuptools
           cache-environment: true
+          init-shell: bash
 
       # - uses: actions/setup-python@v5
       #   with:
@@ -51,6 +51,7 @@ jobs:
       - name: Verify Python architecture
         shell: bash -l {0}
         run: |
+          micromamba activate vtkenv
           python --version
           python -c "import platform; print(platform.machine())"
           file $(which python)
