--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -36,9 +36,6 @@ jobs:
           environment-name: vtkenv
           create-args: >-
             python=${{ matrix.python-version }}
-            wheel
-            build
-            setuptools
           cache-environment: true
           init-shell: bash
 
@@ -72,7 +69,7 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
-          # python -m pip install --upgrade wheel build setuptools
+          python -m pip install --upgrade wheel build setuptools
           python -m pip freeze 
 
       - name: Download vtk
