--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -81,6 +81,7 @@ jobs:
           
       - name: Verify Python Architecture
         run: |
+          micromamba activate vtkenv
           cd ./vtk/VTK-9.2.6
           python CMake/wheel_extract_platlib.py
           arch -arm64 python CMake/wheel_extract_platlib.py
