--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -55,10 +55,10 @@ jobs:
           arch -arm64 brew install python@${{ matrix.python-version }}
           
           # Add brew Python to PATH
-          echo "/opt/homebrew/opt/python@3.${{ matrix.python-version }}/bin" >> $GITHUB_PATH
+          echo "/opt/homebrew/opt/python@${{ matrix.python-version }}/bin" >> $GITHUB_PATH
           
           # Verify installation
-          python3.${{  matrix.python-version }} --version
+          python${{  matrix.python-version }} --version
           arch -arm64 python${{  matrix.python-version }} -c "import platform; print(f'Architecture: {platform.machine()}')"
 
           python --version
