--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -47,10 +47,9 @@ jobs:
           arch -arm64 brew install python@${{ matrix.python-version }}
           
           # Add brew Python to PATH
-          CURRENT_PATH=$PATH
-          # Create new PATH with Python directory first
-          echo "/opt/homebrew/opt/python@${{ matrix.python-version }}/bin" > "$GITHUB_PATH"
-          echo "$CURRENT_PATH" >> "$GITHUB_PATH"
+          PATH="$PATH":/opt/homebrew/opt/python@${{ matrix.python-version }}/bin
+          echo "$PATH" > "$GITHUB_PATH"
+          echo "PATH: $GITHUB_PATH"
 
           python3 -m pip install --upgrade wheel build setuptools
 
