--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -51,16 +51,28 @@ jobs:
           echo "$PATH" > "$GITHUB_PATH"
           echo "PATH: $GITHUB_PATH"
 
-          python3 -m pip install --upgrade wheel build setuptools
-
-          # Verify installation
+      - name: Verify Python
+        run: |
+          echo "python${{  matrix.python-version }}"
           python${{  matrix.python-version }} --version
           arch -arm64 python${{  matrix.python-version }} -c "import platform; print(f'Architecture: {platform.machine()}')"
 
+          echo python3
           python3 --version
           python3 -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python3)
-          
+
+          echo python
+          python --version
+          python -c "import platform; print(f'Architecture: {platform.machine()}')"
+          file $(which python)
+      
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade wheel build setuptools
+          python -m pip freeze
+
       - name: Ubuntu Deps
         if: matrix.os == 'ubuntu-20.04'
         shell: bash -l {0}
@@ -72,13 +84,6 @@ jobs:
         shell: bash -l {0}
         run: |
           brew install ninja
-
-      - name: Setup Python Env
-        shell: bash -l {0}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade wheel build setuptools
-          python -m pip freeze 
 
       - name: Download vtk
         run: |
