--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -47,8 +47,16 @@ jobs:
           arch -arm64 brew install python@${{ matrix.python-version }}
           
           # Add brew Python to PATH
-          PATH="$PATH":/opt/homebrew/opt/python@${{ matrix.python-version }}/bin
-          echo "$PATH" > "$GITHUB_PATH"
+          # PATH="$PATH":/opt/homebrew/opt/python@${{ matrix.python-version }}/bin
+          # echo "$PATH" > "$GITHUB_PATH"
+          
+          # Save current PATH for later
+          CURRENT_PATH=$PATH
+          
+          # Create new PATH with Python directory first
+          echo "/opt/homebrew/opt/python@3.11/bin" > "$GITHUB_PATH"
+          echo "$CURRENT_PATH" >> "$GITHUB_PATH"          
+          
           echo "PATH: $GITHUB_PATH"
 
       - name: Verify Python
