--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -46,21 +46,12 @@ jobs:
           # Install Python with native arm64 architecture
           arch -arm64 brew install python@${{ matrix.python-version }}
           
-          # Add brew Python to PATH
-          # PATH="$PATH":/opt/homebrew/opt/python@${{ matrix.python-version }}/bin
-          # echo "$PATH" > "$GITHUB_PATH"
-          
-          # Save current PATH for later
-          CURRENT_PATH=$PATH
-          
-          # Create new PATH with Python directory first
-          echo "/opt/homebrew/opt/python@3.11/bin" > "$GITHUB_PATH"
-          echo "$CURRENT_PATH" >> "$GITHUB_PATH"          
-          
+          export PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH"          
           echo "PATH: $GITHUB_PATH"
 
       - name: Verify Python
         run: |
+          echo "PATH=$PATH"
           echo "python${{  matrix.python-version }}"
           python${{  matrix.python-version }} --version
           arch -arm64 python${{  matrix.python-version }} -c "import platform; print(f'Architecture: {platform.machine()}')"
