--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -47,7 +47,9 @@ jobs:
           arch -arm64 brew install python@${{ matrix.python-version }}
           
           export PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH"          
-          echo "PATH: $GITHUB_PATH"
+          echo "PATH: $PATH"
+        env:
+          PATH: /opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH
 
       - name: Verify Python
         run: |
