ensure python arch 23

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -48,8 +48,8 @@ jobs:
           
           export PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH"          
           echo "PATH: $PATH"
-        env:
-          PATH: /opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH
+        # env:
+        #   PATH: /opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH
 
       - name: Verify Python
         run: |
