--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -46,23 +46,24 @@ jobs:
           # Install Python with native arm64 architecture
           arch -arm64 brew install python@${{ matrix.python-version }}
           
-          export PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH"          
+          PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/bin:$PATH"          
           echo "PATH: $PATH"
-          echo "GITHUB_PATH: $GITHUB_PATH"
+          echo "PATH=$PATH" >> $GITHUB_ENV
 
       - name: Verify Python
         run: |
           echo "PATH=$PATH"
-          echo "python${{  matrix.python-version }}"
+          echo OPTION "python${{  matrix.python-version }}"
           python${{  matrix.python-version }} --version
           arch -arm64 python${{  matrix.python-version }} -c "import platform; print(f'Architecture: {platform.machine()}')"
+          file $(which python3)
 
-          echo python3
+          echo OPTION python3
           python3 --version
           python3 -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python3)
 
-          echo python
+          echo OPTION python
           python --version
           python -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python)
