--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -53,17 +53,21 @@ jobs:
       - name: Verify Python
         run: |
           echo "PATH=$PATH"
+
           echo OPTION "python${{  matrix.python-version }}"
+          command -v python${{  matrix.python-version }}
           python${{  matrix.python-version }} --version
           arch -arm64 python${{  matrix.python-version }} -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python3)
-
+          
           echo OPTION python3
+          command -v python3
           python3 --version
           python3 -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python3)
-
+          
           echo OPTION python
+          command -v python
           python --version
           python -c "import platform; print(f'Architecture: {platform.machine()}')"
           file $(which python)
