--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -51,6 +51,7 @@ jobs:
           # /opt/homebrew/opt/python@3.11/libexec/bin
           PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/libexec/bin:$PATH"          
           echo "PATH=$PATH" >> $GITHUB_ENV
+          echo "Python3_ROOT=/opt/homebrew/opt/python@${{ matrix.python-version }}" >> $GITHUB_ENV
 
       - name: Verify Python
         run: |
