--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -45,8 +45,7 @@ jobs:
           brew uninstall --ignore-dependencies python@3.11 || true
           
           # Install Python with native arm64 or architecture
-          arch -${{ matrix.arch }} brew install --without-links python@${{ matrix.python-version }}
-          brew link --force --overwrite python@${{ matrix.python-version }} || true
+          arch -${{ matrix.arch }} brew install --force --overwrite python@${{ matrix.python-version }}
           
           # Note: Unversioned and major-versioned symlinks `python`, `python3`, `python-config`, `python3-config`, `pip`, `pip3`, etc. 
           # pointing to `python3.11`, `python3.11-config`, `pip3.11` etc., respectively, are installed into
