ensure python arch 42

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -22,10 +22,12 @@ jobs:
             arch: 'x86_64'
             python_arch: 'x64'
             target: 'x86_64-apple-macos11'
+            brew_path: '/usr/local/opt'
           - os: 'macos-14'
             arch: 'arm64'
             python_arch: 'arm64'
             target: 'arm64-apple-macos11'
+            brew_path: '/opt/homebrew/opt'
 
     steps:
 
@@ -49,8 +51,8 @@ jobs:
           
           # Note: Unversioned and major-versioned symlinks `python`, `python3`, `python-config`, `python3-config`, `pip`, `pip3`, etc. 
           # pointing to `python3.11`, `python3.11-config`, `pip3.11` etc., respectively, are installed into
-          # /opt/homebrew/opt/python@3.11/libexec/bin
-          PATH="/opt/homebrew/opt/python@${{ matrix.python-version }}/libexec/bin:$PATH"          
+          # /opt/homebrew/opt/python@3.11/libexec/bin (arm64) or /usr/local/opt/python@3.11/libexec/bin (x86_64)
+          PATH="${{ matrix.brew_path }}/python@${{ matrix.python-version }}/libexec/bin:$PATH"          
           echo "PATH=$PATH" >> $GITHUB_ENV
 
           # ensure cmake takes the right Python
