ensure python arch 43

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -57,6 +57,7 @@ jobs:
 
           # ensure cmake takes the right Python
           echo "Python3_ROOT=/opt/homebrew/opt/python@${{ matrix.python-version }}" >> $GITHUB_ENV
+          echo "Python_ROOT=/opt/homebrew/opt/python@${{ matrix.python-version }}" >> $GITHUB_ENV
 
       - name: Verify Python
         run: |
